[package]
name = "game"
version = "0.1.0"
edition = "2018"


[dependencies.ecs]
path = "../ecs"
version = "0.1.0"

[dependencies.renderer]
path = "../renderer"
version = "0.1.0"

[dependencies.bulletrs]
path = "../bulletrs"
version = "0.3.0"

[dependencies.math]
path = "../math"
version = "0.1.0"

[dependencies.core]
path = "../deno"
version = "0.77.0"

[dependencies]
glutin = "0.24.1"
winit = "0.22.2"
takeable-option = "0.4"
image = "0.21"
skia-safe = "0"
lazy_static = "1.4.0"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
cgmath = { version = "0.15.0", features = ["mint"] }
anyhow = "1.0.38"
url = { version = "2.2.0", features = ["serde"] }
futures = "0.3.12"

[build-dependencies]
gl_generator = "0.14"

[[example]]
name = "javascript-hello-world"
path = "examples/javascript/hello-world.rs"

[[example]]
name = "javascript-builtin"
path = "examples/javascript/builtin.rs"

[[example]]
name = "javascript-modules"
path = "examples/javascript/modules.rs"

[[example]]
name = "javascript-webassembly"
path = "examples/javascript/webassembly.rs"


